<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/update_check" android:id="@+id/menu_update_feeds" android:icon="@android:drawable/ic_menu_rotate"></item>
    <item android:title="@string/settings" android:icon="@android:drawable/ic_menu_preferences" android:id="@+id/menu_settings"></item>
    <item android:id="@+id/menu_other" android:title="@string/other"  android:icon="@android:drawable/ic_menu_more">
        <menu>
		    <item android:id="@+id/menu_review" android:icon="@drawable/ic_menu_dialog" android:title="@string/review_app"></item>
		    <item android:icon="@drawable/ic_menu_globe" android:id="@+id/menu_notify_all" android:title="@string/share_app_with_friends"></item>
		    <item android:id="@+id/menu_support" android:title="@string/support" android:icon="@drawable/ic_menu_globe"/>
        </menu>
    </item>
    <item android:id="@+id/menu_favorites" android:title="@string/favorite" android:icon="@android:drawable/ic_menu_gallery">
    </item>
    
</menu>
