<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_reload" android:icon="@android:drawable/ic_menu_rotate" android:title="@string/do_reload"></item><item android:title="@string/share" android:id="@+id/menu_share" android:icon="@android:drawable/ic_menu_share"></item>
    <item android:id="@+id/menu_favorite" android:title="@string/favorite" android:icon="@android:drawable/btn_star"></item>
    <item android:id="@+id/menu_other" android:title="@string/other"  android:icon="@android:drawable/ic_menu_more">
        <menu>
		    <item android:id="@+id/menu_review" android:icon="@drawable/ic_menu_dialog" android:title="@string/review_app"></item>
		    <item android:icon="@drawable/ic_menu_globe" android:id="@+id/menu_notify_all" android:title="@string/share_app_with_friends"></item>
        </menu>
    </item>
    
</menu>
